--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -10,7 +10,7 @@ on:
       branch:
         description: 'Branch'
         required: true
-        default: 'release'
+        default: 'master'
 
 env:
   PROJECT: ${{github.event.inputs.project}}
