--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -46,6 +46,8 @@ jobs:
           ref: translations/${{env.PROJECT}}/${{env.RANDOM_ID}}
       - name: Generate
         run: scripts/generator.sh
+# You can make whatever type of change to the repo...
+      - run: echo "123" > ./pathToRepo/file.txt
       - name: Commit
         uses: EndBug/add-and-commit@v4
         with:
