--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -35,7 +35,6 @@ jobs:
       - run: npm ci
       - name: Id
         run: node scripts/id.js
-
       - name: Make changes to pull request
         run: date +%s > report.txt
 
@@ -47,7 +46,7 @@ jobs:
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           signoff: false
-          branch: example-patches
+          branch: translations/${{env.PROJECT}}/${{env.RANDOM_ID}}
           delete-branch: true
           title: '[Example] Update report'
           body: |
