--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -33,6 +33,8 @@ jobs:
           key: ${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}
           restore-keys: ${{runner.os}}-node-
       - run: npm ci
+      - name: ID
+        run node scripts/id.js
       - name: Gnerator
         run: scripts/generator.sh
 
