--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -30,6 +30,8 @@ jobs:
       - run: npm ci
       - name: Id
         run: node scripts/id.js
+      - name: Generator
+        run: scripts/generator.sh
 
       - name: Make changes to pull request
         run: date +%s > report.txt
