--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Id
         run: node scripts/id.js
       - name: Generator
-        run: $(date "+%s") > ../$(date "+%s").txt
+        run: ./scripts/generator.sh
 
       - name: Make changes to pull request
         run: date +%s > report.txt
