--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Generator
         run: scripts/generator.sh
 
+      - name: Diff
+        run: scripts/diff.sh
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
@@ -47,6 +50,7 @@ jobs:
           delete-branch: true
           title: Update translations for ${{env.PROJECT}}
           body: |
-            Update translations
+          Update translations
+
+          ${{env.DIFF}}
           labels: update-translations
-          draft: false
